src/css/main.css
/* ... */
a.text-link[href*="//"]:before
{
  content: '';
  display: inline-block;
  vertical-align: baseline;
  position: relative;
  top: 2px; /* visual balance */
  width: 1em;
  height: 1em;
  background-color: var(--clr-external-link);
  mask-image: url('/open-in-new.svg');
  mask-size: 100%;
  mask-repeat: no-repeat;
  mask-position: 50% 50%;
  margin-right: 0.1em;
}
a.text-link[href*="//"]:hover
{
  text-decoration: underline;
}

/* Table styles  */
table {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
  font-size: 0.9rem;
  line-height: 1.7rem;
  border-collapse: collapse;
  width: 100%;
}
th {
  font-weight: bold;
  color: white;
  background-color: var(--clr-green-4);
  opacity: 1;
  /* border-top-left-radius: var(--radius-2); */
  /* border-top-right-radius: var(--radius-2); */
}
td,
th {
  text-align: left;
  /* border-bottom: 0.5px solid var(--clr-white); */
  font-feature-settings: 'tnum';
  -moz-font-feature-settings: 'tnum';
  -ms-font-feature-settings: 'tnum';
  -webkit-font-feature-settings: 'tnum';
  padding-left: 0.6rem;
  padding-right: 0.6rem;
  padding-top: 0.725rem;
  padding-bottom: calc(0.725rem - 1px);
}
th:first-child {
  padding-left: 0.5rem;
  border-top-left-radius: var(--radius-2);
}
th:last-child {
  padding-right: 0.5rem;
  border-top-right-radius: var(--radius-2);
}
td {
  background-color: var(--clr-green-5);
}
tr:last-child > td:first-child {
  border-bottom-left-radius: var(--radius-2);
}
tr:last-child > td:last-child {
  border-bottom-right-radius: var(--radius-2);
}

/* blockquote p {
  font-style: italic;
  font-size: 1.5rem;
  line-height: 2.125rem;
  text-align: center;
  max-width: 36rem;
  margin: 3rem auto;
} */

h1,
h2,
h3,
h4 {
  color: var(--clr-headings);
  letter-spacing: var(--spacing);
  text-transform: capitalize;
  line-height: 1.25;
  margin-top: var(--spacing-10);
  margin-bottom: 0.75rem;
  font-family: var(--overpass-gowun-dodum-font);
  scroll-margin-top: 6rem;
}
h1 {
  font-size: var(--fontSize-5);
  font-weight: 900;
}
h2 {
  font-size: var(--fontSize-4);
}
h3 {
  font-size: var(--fontSize-3);
}
h4 {
  font-size: var(--fontSize-2);
}

h2 a {
  font-size: 2rem;
}

h1:hover > .autolink > svg {
  visibility: visible;
  fill: white;
  margin-left: 4px;
}
h2:hover > .autolink > svg {
  visibility: visible;
  fill: white;
  margin-left: 4px;
}
h3:hover > .autolink > svg {
  visibility: visible;
  fill: white;
  margin-left: 4px;
}
h4:hover > .autolink > svg {
  visibility: visible;
  fill: white;
  margin-left: 4px;
}

p {
  margin-bottom: 0.5rem;
  color: var(--clr-white);
}

strong {
  color: white;
}

svg {
  vertical-align: middle;
}

@media screen and (min-width: 800px) {
  h1 {
    font-size: var(--fontSize-6);
    font-weight: 900;
  }
  h2 {
    font-size: var(--fontSize-5);
  }
  h3 {
    font-size: var(--fontSize-4);
  }
  h4 {
    font-size: var(--fontSize-3);
  }
  body {
    font-size: 1rem;
  }
  h1,
  h2,
  h3,
  h4 {
    line-height: 1;
  }
}
/*  global classes */

.btn,
.btn-danger {
  text-transform: uppercase;
  background: var(--newsletter-sub-btn);
  color: white;
  padding: 0.375rem 0.75rem;
  letter-spacing: var(--spacing);
  display: inline-block;
  font-weight: 400;
  -webkit-transition: var(--transition);
  transition: var(--transition);
  font-size: 0.875rem;
  border: 2px solid transparent;
  cursor: pointer;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
  border-radius: var(--radius);
}
.btn:hover {
  color: var(--clr-primary-1);
  background: var(--newsletter-sub-btn-hover);
}

.btn-danger {
  color: var(--clr-white);
  background: var(--clr-red-dark);
}
.btn-danger:hover {
  color: var(--clr-red-dark);
  background: var(--clr-red-light);
}
.center-btn {
  display: block;
  width: 12rem;
  text-align: center;
  margin: 2rem auto;
}
/* section */
.page-center {
  width: 90vw;
  margin: 0 auto;
  max-width: var(--max-width);
}
@media screen and (min-width: 992px) {
  .page-center {
    width: 95vw;
  }
}

.bg-grey {
  background: var(--clr-grey-10);
}
/* social links */

main {
  margin-top: 5rem;
}
/*
===============
Navbar
===============
*/
.navbar {
  height: 5rem;
  display: flex;
  align-items: center;
  background: var(--clr-navbar);
  position: fixed;
  z-index: 2;
  top: 0;
  left: 0;
  width: 100%;
  align-items: center;
  box-shadow: var(--navbar-shadow);
  display: flex;
}
.nav-container {
  width: 100%;
  position: relative;
}
.nav-center {
  width: 90vw;
  max-width: var(--max-width);
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.nav-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.nav-logo {
  display: block;
  height: 45px;
}
.nav-logo img {
  height: 100%;
  padding-bottom: 0.5rem;
}
.nav-links {
  display: none;
}
.nav-icons {
  display: none;
}
.toggle-btn {
  font-size: 2rem;
  background: transparent;
  border-color: transparent;
  color: var(--clr-green-5);
  cursor: pointer;
  transition: var(--transition);
}
.toggle-btn:hover {
  color: var(--clr-green-2);
}

.github-icon {
  color: #fff;
}
.twitter-icon {
  color: #00acee;
}
.instagram-icon {
  color: #bc2a8d;
}
/* ... */

